Fix the overlapping issue with the animation and improve box shadow

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ p {
 .image-wrapper {
   grid-column: 1 / 3;
   grid-row: 1;
-  box-shadow: 10px 0px 13px 2px #797979;
+  box-shadow: 7px 6px 20px 5px #797979;
 }
 
 .mobile {
@@ -217,7 +217,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  box-shadow: 10px 0px 13px 2px #797979;
+  box-shadow: 7px 6px 20px 5px #797979;
 }
 
 .right-column > h2 {
@@ -327,6 +327,7 @@ h4 {
       align-items: flex-start;
       justify-content: center;
       gap: 0px;
+      z-index: 1;
   }
 
   .nav-item {
@@ -336,6 +337,8 @@ h4 {
   .hamburger {
       display: block;
       cursor: pointer;
+      position: relative;
+      z-index: 2;
   }
 
   .hamburger.active .bar:nth-child(2) {
